--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -32,7 +32,6 @@ jobs:
         sudo apt-get install python3-pip
         sudo pip3 install virtualenv 
         bash create_venv.sh
-        source vgnet/bin/activate
-        source test/run_generate_graph.sh
+        source test/run_test_generate_graph.sh
         
     
